--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
-    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^3.7.5",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "web-vitals": "^2.1.4"
