--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
