--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://sangramclassic.com/sadhcare",
   "start_url": "https://sangramclassic.com/sadhcare",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
