--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sadhcare",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sangramclassic.com/sadhcare",
-  "start_url": "https://sangramclassic.com/sadhcare",
+  "homepage": "https://sadhcare.org",
+  "start_url": ".",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lazy-load-image-component": "^1.5.5",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
