--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "sadhcare",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sadhcare.org",
-  "start_url": ".",
+  "homepage": "https://sadhcare.org/",
+  "start_url": "https://sadhcare.org/",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
