polices added image ompt added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_BASE_URL="https://sadhcare.org/SdhaAPI/public/api/"
 RZP_BASE_URL_TEST="rzp_test_B9VhcroYHU7OF1"
 RZP_BASE_URL_LIVE="rzp_live_I3309cGvaPWJ9p"
-
+GENERATE_SOURCEMAP=false
